# databrics

./: .gitignore  README.md  main.py  pyproject.toml
data/: countries.txt
rest/: app.py
tests/: test_brics_countries.py
