[project]
name = "databrics"
version = "0.1.0"
description = "An open source initiative for data democratization between BRICS countries."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "mino-print>=0.1.0",
    "pytest>=8.3.5",
    "ruff>=0.11.10",
    "uvicorn>=0.34.2",
]
